--- a/assignment1.html
+++ b/assignment1.html
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-            <img src = "task.jpg">
+            <p> <img src = "task.jpg"> </p>
         </div>
         <div>
             <table>
